--- a/.github/workflows/pmd.yaml
+++ b/.github/workflows/pmd.yaml
@@ -12,4 +12,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: 'github-pr-review'
-          tool_name: 'pmd_panda'
+          tool_name: 'pmd_reviewdog'
