--- a/.github/workflows/pmd.yml
+++ b/.github/workflows/pmd.yml
@@ -32,7 +32,7 @@ jobs:
         id: pmd
         uses: pmd/pmd-github-action@967a81f8b657c87f7c3e96b62301cb1a48efef29
         with:
-          rulesets: 'rulesets-pmd.xml'
+          rulesets: 'rulesets/java/quickstart.xml'
           sourcePath: 'src/main/java'
           analyzeModifiedFilesOnly: false
       - name: Upload SARIF file
